list / run command for ubuntu plugin
